--- a/DigitalRegistry.csproj
+++ b/DigitalRegistry.csproj
@@ -5,6 +5,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20191123023015_InitialCreate.cs" />
+    <Compile Remove="Migrations\20191123023015_InitialCreate.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
